<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/wasim_jaffer_ahmeed_hq_designation"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#F1536E"
        android:textSize="20sp"
        android:fontFamily="sans-serif-medium"/>


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#26282A3C"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <LinearLayout
        android:id="@+id/day_and_search"
        android:layout_width="match_parent"
        android:layout_height="379dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView">


        <LinearLayout
            android:layout_width="517dp"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/work_type"
                android:layout_marginStart="40dp"
                android:textSize="18sp"
                android:textColor="#A6282A3C"
                android:fontFamily="sans-serif"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/field_work"
                android:layout_marginStart="40dp"
                android:textSize="18sp"
                android:textColor="#282A3C"
                android:fontFamily="sans-serif-medium"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="40dp"
                android:text="@string/check_in_time_and_location"
                android:textSize="18sp"
                android:textColor="#A6282A3C"
                android:fontFamily="sans-serif"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="40dp"
                android:orientation="horizontal"
                >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_17_oct_2023_04_32_pm"
                android:textSize="18sp"
                android:textColor="#282A3C"
                android:fontFamily="sans-serif-medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/view"
                    android:textSize="18sp"
                    android:textColor="#F1536E"
                    android:fontFamily="sans-serif-medium"
                    android:drawablePadding="8dp"
                    app:drawableStartCompat="@drawable/marker__1__2" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="40dp"
                android:text="@string/no_4_chaimers_road_nandanam_chennai"
                android:textSize="18sp"
                android:textColor="#282A3C"
                android:fontFamily="sans-serif-medium"/>




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:layout_marginStart="40dp"
                android:text="@string/remarks"
                android:textSize="18sp"
                android:textColor="#A6282A3C"
                android:fontFamily="sans-serif"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="40dp"
                android:text="@string/field_work_planned_according_to_allocation"
                android:textSize="18sp"
                android:textColor="#282A3C"
                android:fontFamily="sans-serif-medium"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="517dp"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/submitted_date"
                android:layout_marginStart="40dp"
                android:textSize="18sp"
                android:textColor="#A6282A3C"
                android:fontFamily="sans-serif"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/_20_oct_2023"
                android:layout_marginStart="40dp"
                android:textSize="18sp"
                android:textColor="#282A3C"
                android:fontFamily="sans-serif-medium"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="40dp"
                android:text="@string/check_out_time_amp_location"
                android:textSize="18sp"
                android:textColor="#A6282A3C"
                android:fontFamily="sans-serif"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="40dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_17_oct_2023_04_32_pm"
                    android:textSize="18sp"
                    android:textColor="#282A3C"
                    android:fontFamily="sans-serif-medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/view"
                    android:textSize="18sp"
                    android:textColor="#F1536E"
                    android:fontFamily="sans-serif-medium"
                    android:drawablePadding="8dp"
                    app:drawableStartCompat="@drawable/marker__1__2" />



            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="40dp"
                android:text="@string/no_4_chaimers_road_nandanam_chennai"
                android:textSize="18sp"
                android:textColor="#282A3C"
                android:fontFamily="sans-serif-medium"/>



        </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/status"
            android:layout_marginStart="40dp"
            android:textSize="18sp"
            android:textColor="#A6282A3C"
            android:fontFamily="sans-serif"/>

        <TextView
            android:layout_width="92dp"
            android:layout_height="39dp"
            android:layout_marginTop="8dp"
            android:text="@string/pending"
            android:layout_marginStart="40dp"
            android:textSize="18sp"
            android:textColor="#282A3C"
            android:gravity="center"
            android:background="@drawable/repots_list"
            android:fontFamily="sans-serif-medium"/>

    </LinearLayout>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>