<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#282A3C"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/Theme.MyFancyTheme">


            <TextView
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/day_report"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                app:drawableStartCompat="@drawable/vector" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <RelativeLayout
        android:id="@+id/serchviewlabel_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        tools:layout_editor_absoluteX="16dp"
        tools:visibility="visible">

        <LinearLayout
            android:id="@+id/linear_layout1"
            android:layout_width="443dp"
            android:layout_height="64dp"
            android:orientation="horizontal"
            android:weightSum="2"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/searchview_label1"
                android:layout_width="0dp"
                android:layout_height="64dp"

                android:layout_weight="2"
                android:background="@drawable/corner_radius"
                android:drawablePadding="6dp"
                android:gravity="start|center"
                android:imeOptions="actionDone"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"

                android:textColor="#282A3C"
                android:textSize="15sp"
                android:transitionName="my_transition_name"
                tools:ignore="TextViewEdits,UseCompatTextViewDrawableXml" />

            <androidx.cardview.widget.CardView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="#282A3C"
                app:cardCornerRadius="5dp">


                <ImageView
                    android:id="@+id/user_profile_image1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo"
                    android:padding="3dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/calendar_days_1"
                    tools:ignore="RtlHardcoded" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/serchviewlabel_layout"
        android:layout_width="775dp"
        android:layout_height="0dp"
        android:layout_marginStart="473dp"
        android:layout_marginTop="18dp"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/serchviewlabel_layout1"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        tools:ignore="MissingConstraints"
        tools:visibility="visible">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/searchview_label"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="2"
                android:background="@drawable/corner_radius"
                android:drawableStart="@drawable/search"
                android:drawablePadding="6dp"
                android:gravity="start|center"
                android:imeOptions="actionDone"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                android:text="@string/search"


                android:textColor="#282A3C"
                android:textSize="15sp"
                android:transitionName="my_transition_name"
                tools:ignore="TextViewEdits,UseCompatTextViewDrawableXml" />

            <androidx.cardview.widget.CardView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="#282A3C"
                app:cardCornerRadius="5dp">


                <ImageView
                    android:id="@+id/user_profile_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo1"
                    android:padding="3dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/app_sort"
                    tools:ignore="RtlHardcoded" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/serchviewlabel_layout1" />



</androidx.constraintlayout.widget.ConstraintLayout>
